fix alignment issue and change header to match user login

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -56,7 +56,7 @@ content {
   width:100%;
 }
 
-.bodycontent {
+/* .bodycontent {
   left: 0;
   right: 0;
   margin: auto;
@@ -66,7 +66,7 @@ content {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 a {
   color: black;
